# agents-on-apps-vs-model-serving

./: README.md  databricks.yml  main.py  pyproject.toml
app/: app.yaml  main.py  requirements.txt
notebooks/: 01_deploy_model_serving.py  02_deploy_databricks_app.py
presentation/: model-serving-vs-apps.html
resources/: agent_app.yml  deploy_databricks_app.yml  deploy_model_serving.yml
src/: __init__.py  agent.py  config.py  tools.py
