[project]
name = "agent-on-apps"
version = "0.1.0"
description = "Demo: LangGraph agent deployed on Model Serving vs Databricks Apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.102.0",
    "databricks-langchain",
    "databricks-agents",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "mlflow[genai]>=3.10.1",
]
